# Monolith-FastAPI

./: pyproject.toml
app/core/common/: __init__.py
