[tool.poetry]
name = "monolith-fastapi"
version = "0.1.0"
description = ""
authors = ["Jefferson Junior <jefferson.aleluia@cogecom.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
